@@ -44,7 +44,7 @@ If you prefer to follow the git repository, the following branch and tag names m
 More Information
 ----------------
 
-Please see the documentation in the doc folder or at http://docs.phpmyadmin.net/.
+Please see the documentation in the doc folder or at https://docs.phpmyadmin.net/.
 
 For support or to learn how to contribute code or by translating to your language,
 visit https://www.phpmyadmin.net/
