@@ -335,7 +335,7 @@ class FormDisplayTest extends PMATestCase
     public function testGetDocLink()
     {
         $this->assertEquals(
-            "./url.php?url=http%3A%2F%2Fdocs.phpmyadmin.net%2Fen%2Flatest%2F" .
+            "./url.php?url=https%3A%2F%2Fdocs.phpmyadmin.net%2Fen%2Flatest%2F" .
             "config.html%23cfg_Servers_3_test_2_",
             $this->object->getDocLink("Servers/3/test/2/")
         );
